# poc-timeseries

./: .gitignore  Makefile  README.md  docker-compose.yml  experiment.py  timeseries.code-workspace
flask_server/: Dockerfile-experiment.dockerfile  README.md  app.py  hexagonal.py  infrastructure.py  pylintrc  pyproject.toml  requirements.txt  run-fastapi-server.sh  run-local-server.sh  tutorial.py
flask_server/src/: app.py  hexagonal.py
