[tool.poetry]
name = "flask-server"
version = "0.1.0"
description = "POC to use flask and time series databases"
authors = ["eriesgo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9.9"
Flask = "^3.0.1"
fastapi = {extras = ["all"], version = "^0.109.2"}
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
types-psycopg2 = "^2.9.21.20240118"
pyright = "^1.1.350"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
